fixed index page on smaller screens

--- a/CSS/student.css
+++ b/CSS/student.css
@@ -8,7 +8,7 @@ body{
  #topBar{
      width: 100%;
      height: 7.2em;
-     background: rgba(255, 255, 255, 0.9) ;
+     background: rgba(255, 255, 255, 0.9);
  }
  
  #logo{
@@ -62,7 +62,8 @@ body{
     margin-right: 12em;
     margin-top: 0;
     height: 100%;
-    min-height: 80vh;
+    min-height: 0;
+    min-width: 0;
 }
 
 #moduleCard {
@@ -164,4 +165,223 @@ body{
     margin-top: 2em;
     margin-bottom: 2em;
     margin-right: 3em;
+}
+
+/* 
+Different screen sizes
+ */
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .body {
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #topBar {
+        width: 100%;
+        height: 6.2em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #logo {
+        margin-left: 1em;
+        width: 30%;
+        height: 4.5em;
+        margin-top: 1em;
+
+    }
+}
+
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .text-bottom {
+        font-size: 0.7em;
+        margin-top: 1em;
+        
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #title {
+        font-size: 1.8em;
+        margin-top: 1em;
+    }
+}
+
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .sidebar {
+    position: fixed;
+    width: 30%;
+    padding-top: 12.3em;
+    top: 0%;
+    bottom: 0%;
+    right: 1%;
+    font-size: 0.5em;
+
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+}
+
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .dropbtn {
+        background-color: #3498DB;
+        color: white;
+        padding: 12px;
+        font-size: 0.8em;
+        border: none;
+        cursor: pointer;
+        margin-left: auto;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .dropbtn:hover, .dropbtn:focus {
+        background-color: #2980B9;
+        padding: 12px;
+        font-size: 0.8em;
+    }
+}
+
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        /* min-width: 160px; */
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        font-size: 0.8em;
+        width: 60%;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: inline-block;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .dropdown-content a:hover {
+        background-color: #ddd;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: inline-block;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .show {
+        display: inline-block;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .show a {
+        display: inline-block;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .show a:hover {
+        display: inline-block;
+        background-color: #ddd;
+        width: 100%;
+    }
+}
+
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #gradeCard {
+        min-width: 10.5em;
+        min-height: 10.5em;
+        right: 5em;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        font-size: 0.5em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #examCard {
+        min-width: 12em;
+        min-height: 17em;
+        right: 5em;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        font-size: 0.5em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #moduleCard {
+        min-width: 12em;
+        width: auto;
+        min-height: 10.5em;
+        height: auto;
+        right: 5em;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        font-size: 0.5em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .jumbotron {
+        margin-left: auto;
+        z-index: 1;
+        margin-right: auto;
+        width: min-content;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .lead {
+        font-size: 1em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .jumbotron-heading {
+        font-size: 1.5em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #button-for-scan {
+        font-size: 0.8em;
+        min-width: 0.8em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #button-stop {
+        font-size: 0.8em;
+        min-width: 0.8em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #listHeader{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
+        width: 0px;
+    }
 }
