--- a/CSS/style.css
+++ b/CSS/style.css
@@ -76,3 +76,98 @@ background-color: rgba(46,171,211,0.8);
 .bigText{
     font-size: 3em;
 }
+
+/* 
+Different screen sizes
+ */
+
+ @media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .body {
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #topBar {
+        width: 100%;
+        height: 6.2em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #logo {
+        margin-left: 1em;
+        width: 30%;
+        height: 5em;
+        margin-top: 1em;
+
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .text-bottom {
+        font-size: 0.8em;
+        margin-top: 1em;
+        
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #title {
+        font-size: 1.8em;
+        margin-top: 1em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #loginbuttonS {
+        height: 60%;
+        margin-bottom: 10%;
+        font-size: 0.8em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #loginbuttonT {
+        height: 60%;
+        margin-bottom: 10%;
+        font-size: 0.8em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    #loginbuttonA {
+        height: 60%;
+        margin-bottom: 10%;
+        font-size: 0.8em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+    .bigText {
+        font-size: 2em;
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
+.btn-lg {
+    width: 8em;
+    height: 6em;
+    position: absolute;
+    right: 0;
+    font-size: 1.2em;
+    background-color: rgba(65,105,225,0.8);
+    color: white;
+    clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 15%, 90% 0);
+    border-radius: 0 !important;
+    z-index: fixed;
+    display: inline-block;
+    bottom: 1em;
+ } 
+
+ .btn-lg:hover {
+     background-color: rgba(61,93,190,0.8);
+ }
+}
